--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
+<!-- test file to experiment with the geolocation api -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
